fix(Steps): center align inner icon/text (#3811)

--- a/src/Steps/styles/index.less
+++ b/src/Steps/styles/index.less
@@ -61,7 +61,8 @@
   // Icon content
   > .rs-steps-item-icon {
     width: 100%;
-    display: block;
+    display: flex;
+    justify-content: center;
     text-align: center;
     position: relative;
 
